MWPW-193204: Fix tab border alignment
The bottom border on the quiet tabs became misaligned with the typography
changes. Set the left and right paddles and the tabs container the same
height so that they align.

--- a/edu/styles/styles.css
+++ b/edu/styles/styles.css
@@ -104,6 +104,15 @@
   }
 }
 
+/* Override tab block due to typography changes */
+@media screen and (max-width: 1199px) {
+  .tabs.quiet {
+    .tabList, .paddle {
+      height: 51px;
+    }
+  }
+}
+
 /* Blank author: text when not link */
 .article-header .article-byline-info > p:first-child {
   font-weight: 600;
